out
make -C /lib/modules/3.4.113-sun8i/build/ M=/root/kernel modules
make[1]: Entering directory '/usr/src/linux-headers-3.4.113-sun8i'
  CC [M]  /root/kernel/address.o
/root/kernel/address.c:32:8: error: expected identifier or ‘(’ before ‘+’ token
 enum h2+_pwm_prescale {
        ^
/root/kernel/address.c:51:8: error: ‘h2’ defined as wrong kind of tag
 struct h2+_pwm_ctrl {
        ^
/root/kernel/address.c:51:10: error: expected identifier or ‘(’ before ‘+’ token
 struct h2+_pwm_ctrl {
          ^
/root/kernel/address.c:64:7: error: ‘h2’ defined as wrong kind of tag
 union h2+_pwm_ctrl_u {
       ^
/root/kernel/address.c:64:9: error: expected identifier or ‘(’ before ‘+’ token
 union h2+_pwm_ctrl_u {
         ^
/root/kernel/address.c:74:18: error: expected ‘:’, ‘,’, ‘;’, ‘}’ or ‘__attribute__’ before ‘=’ token
   void *pin_addr = SW_PORTC_IO_BASE; 
                  ^
/root/kernel/address.c: In function ‘opi0_init’:
/root/kernel/address.c:132:43: error: implicit declaration of function ‘MKDEV’ [-Werror=implicit-function-declaration]
   pwm0 = device_create (&pwm_class, NULL, MKDEV(0,0), &channel, "pwm0");
                                           ^
/root/kernel/address.c: In function ‘opi0_exit’:
/root/kernel/address.c:153:40: error: ‘name’ undeclared (first use in this function)
   printk(KERN_INFO "Module %s exit\n", name);
                                        ^
/root/kernel/address.c:153:40: note: each undeclared identifier is reported only once for each function it appears in
/root/kernel/address.c: In function ‘pwm_run_store’:
/root/kernel/address.c:213:10: error: expected ‘{’ before ‘struct’
   struct struct pwm_channel *chan = dev_get_drvdata (dev);
          ^
/root/kernel/address.c:213:10: error: two or more data types in declaration specifiers
/root/kernel/address.c:222:29: error: ‘chan’ undeclared (first use in this function)
     if (pwm_enable (enable, chan))
                             ^
/root/kernel/address.c: In function ‘pwm_polarity_store’:
/root/kernel/address.c:231:10: error: expected ‘{’ before ‘struct’
   struct struct pwm_channel *chan = dev_get_drvdata (dev);
          ^
/root/kernel/address.c:231:10: error: two or more data types in declaration specifiers
/root/kernel/address.c: In function ‘pwm_prescale_store’:
/root/kernel/address.c:238:10: error: expected ‘{’ before ‘struct’
   struct struct pwm_channel *chan = dev_get_drvdata (dev);
          ^
/root/kernel/address.c:238:10: error: two or more data types in declaration specifiers
/root/kernel/address.c: In function ‘pwm_entirecycles_store’:
/root/kernel/address.c:245:10: error: expected ‘{’ before ‘struct’
   struct struct pwm_channel *chan = dev_get_drvdata (dev);
          ^
/root/kernel/address.c:245:10: error: two or more data types in declaration specifiers
/root/kernel/address.c: In function ‘pwm_allcycles_store’:
/root/kernel/address.c:252:10: error: expected ‘{’ before ‘struct’
   struct struct pwm_channel *chan = dev_get_drvdata (dev);
          ^
/root/kernel/address.c:252:10: error: two or more data types in declaration specifiers
/root/kernel/address.c: In function ‘pwm_enable’:
/root/kernel/address.c:260:8: error: invalid type argument of ‘->’ (have ‘struct pwm_channel’)
   chan -> enabled = enable;
        ^
cc1: some warnings being treated as errors
scripts/Makefile.build:313: recipe for target '/root/kernel/address.o' failed
make[2]: *** [/root/kernel/address.o] Error 1
Makefile:1368: recipe for target '_module_/root/kernel' failed
make[1]: *** [_module_/root/kernel] Error 2
make[1]: Leaving directory '/usr/src/linux-headers-3.4.113-sun8i'
Makefile:4: recipe for target 'all' failed
make: *** [all] Error 2
